force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__AdjustedTotalDeliveryAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__AdjustedTotalDeliveryAmount__c</fullName>
    <label>Adjusted Total Delivery Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AdjustedTotalDeliveryAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>