force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__BusinessModel__c.field-meta.xml
<CustomField>
    <fullName>ssot__BusinessModel__c</fullName>
    <label>Business Model</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BusinessModel</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>