force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__ConfirmationDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ConfirmationDate__c</fullName>
    <label>Confirmation Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ConfirmationDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>