force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__ContractId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContractId__c</fullName>
    <label>Contract</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContractId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>