force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__FiledDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__FiledDate__c</fullName>
    <label>Filed Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FiledDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>