force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__IsTaxExempt__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsTaxExempt__c</fullName>
    <label>Is Tax Exempt</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsTaxExempt</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>