force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__MobileStoreSalesStoreId__c.field-meta.xml
<CustomField>
    <fullName>ssot__MobileStoreSalesStoreId__c</fullName>
    <label>MobileStoreSales Store</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MobileStoreSalesStoreId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>