force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__OrderEndDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__OrderEndDate__c</fullName>
    <label>Order End Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OrderEndDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>