force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__OrderinsuranceAmountCurrency__c.field-meta.xml
<CustomField>
    <fullName>ssot__OrderinsuranceAmountCurrency__c</fullName>
    <label>Order insurance Amount Currency</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OrderinsuranceAmountCurrency</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>