force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__OrderStartDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__OrderStartDate__c</fullName>
    <label>Order Start Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OrderStartDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>