force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__OwnerUserId__c.field-meta.xml
<CustomField>
    <fullName>ssot__OwnerUserId__c</fullName>
    <label>Owner User Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OwnerUserId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>