force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__PaidAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__PaidAmount__c</fullName>
    <label>Paid Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PaidAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>