force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__PaymentAdjustmentReasonText__c.field-meta.xml
<CustomField>
    <fullName>ssot__PaymentAdjustmentReasonText__c</fullName>
    <label>Payment Adjustment Reason</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PaymentAdjustmentReasonText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>