force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__PaymentTermCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PaymentTermCodeId__c</fullName>
    <label>Payment Term Code</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PaymentTermCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>