force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__PlannedDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__PlannedDeliveryDate__c</fullName>
    <label>Planned Delivery Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PlannedDeliveryDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>