force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__PriceCalculationStatusMessageText__c.field-meta.xml
<CustomField>
    <fullName>ssot__PriceCalculationStatusMessageText__c</fullName>
    <label>Price Calculation Status Message</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PriceCalculationStatusMessageText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>