force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__PurchaseOrderDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__PurchaseOrderDate__c</fullName>
    <label>Purchase Order Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PurchaseOrderDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>