force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__PurchaseOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__PurchaseOrderNumber__c</fullName>
    <label>Purchase Order Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PurchaseOrderNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>