force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__rel_1697761162017_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761162017_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactPointEmail_Id_map_SalesOrder__rel</label>
    <referenceTo>ssot__ContactPointEmail__dlm</referenceTo>
    <relationshipLabel>ContactPointEmail_Id_map_SalesOrder__rel</relationshipLabel>
    <relationshipName>rel_1697761162017_end</relationshipName>
    <type>Lookup</type>
</CustomField>