force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__RenewalUpliftRate__c.field-meta.xml
<CustomField>
    <fullName>ssot__RenewalUpliftRate__c</fullName>
    <label>Renewal Uplift Rate</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RenewalUpliftRate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>