force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__SalesOrderChangeLogs__c.field-meta.xml
<CustomField>
    <fullName>ssot__SalesOrderChangeLogs__c</fullName>
    <label>SalesOrderChangeLogs relationship</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SalesOrderChangeLogs</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>