force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__SalesOrderPaymentSummaries__c.field-meta.xml
<CustomField>
    <fullName>ssot__SalesOrderPaymentSummaries__c</fullName>
    <label>SalesOrderPaymentSummaries relationship</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SalesOrderPaymentSummaries</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>