force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__SalesOrderSystemStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__SalesOrderSystemStatus__c</fullName>
    <label>[DoNotUse]Sales Order System Status</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SalesOrderSystemStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>