force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__SalesOrderType__c.field-meta.xml
<CustomField>
    <fullName>ssot__SalesOrderType__c</fullName>
    <label>[DoNotUse]Sales Order Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SalesOrderType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>