force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__ShipToEmailId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShipToEmailId__c</fullName>
    <label>Ship To Email</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ShipToEmailId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>