force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__TotalDeliveryAdjustmentDistAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalDeliveryAdjustmentDistAmount__c</fullName>
    <label>Total Delivery Adjustment Dist Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalDeliveryAdjustmentDistAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>