force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__TotalDeliverytAmountCurrencyId__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalDeliverytAmountCurrencyId__c</fullName>
    <label>Total Delivery Amount Currency</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalDeliverytAmountCurrencyId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>