force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__TotalPendingBillingAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalPendingBillingAmount__c</fullName>
    <label>Total Pending Billing Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalPendingBillingAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>