force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__TotalProductAdjustmentDistAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalProductAdjustmentDistAmount__c</fullName>
    <label>Total Product Adjustment Dist Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalProductAdjustmentDistAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>