force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__TotalWithTaxAdjDeliveryAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalWithTaxAdjDeliveryAmount__c</fullName>
    <label>Total With Tax Adj Delivery Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalWithTaxAdjDeliveryAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>