force-app/main/default/objects/ssot__SalesOrder__dlm/fields/ssot__TotalWithTaxDeliveryAdjDistAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalWithTaxDeliveryAdjDistAmount__c</fullName>
    <label>Total With Tax Delivery Adj Dist Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalWithTaxDeliveryAdjDistAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>